--- a/composer.json
+++ b/composer.json
@@ -12,22 +12,22 @@
   "bin": ["bin/psr4-converter"],
   "autoload": {
     "psr-4": {
-      "LesPhp\\PSR4Converter\\": "src/"
+      "LesPhp\\PSR4Converter\\": "src/",
+      "Symplify\\SimplePhpDocParser\\": "simple-doc-parser/"
     }
   },
   "require": {
-    "php": "^8.1",
+    "php": ">=8.1",
     "ext-json": "*",
     "nikic/php-parser": "^4.13",
-    "symfony/console": "^6.0",
-    "symfony/finder": "^6.0",
-    "symfony/serializer": "^6.0",
+    "symfony/console": "^7.0",
+    "symfony/finder": "^7.0",
+    "symfony/serializer": "^7.0",
     "symfony/property-info": "^6.0",
-    "symfony/filesystem": "^6.0",
+    "symfony/filesystem": "^7.0",
     "lesphp/property-info-typed-array": "^6.0",
-    "symplify/astral": "^10.2",
-    "phpstan/phpdoc-parser": "^1.5",
-    "symfony/property-access": "^6.0"
+    "phpstan/phpdoc-parser": "^1.25",
+    "symfony/property-access": "^7.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^9.5"
